# criptoBot

./: .env  .gitignore  Cargo.toml  README.md
criptoBot-contrato/cache/: solidity-files-cache.json
criptoBot-contrato/src/: FlashArbitrage.sol
criptoBot-contrato/test/: FlashArbitrage.t.sol
src/: constructor.rs  coordinador.rs  detector.rs  evaluador.rs  firmante.rs  main.rs  pools.rs  rpc.rs  tokens.rs
src/abi/: uniswap_v2.json
